fixed form validation on async

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -460,11 +460,38 @@ window.AC = new Autocomplete.default({
     parent: 'body',
     // formShow: 'manual',
     suburbs: [{
-        label: 'Sydney NSW 2000',
-        value: '2342243'
+        "value": "464",
+        "label": "Darling Harbour"
     }, {
-        label: 'Ryde NSW 2000',
-        value: '123654'
+        "value": "465",
+        "label": "Dawes Point"
+    }, {
+        "value": "466",
+        "label": "Haymarket"
+    }, {
+        "value": "467",
+        "label": "Millers Point"
+    }, {
+        "value": "468",
+        "label": "Parliament House"
+    }, {
+        "value": "469",
+        "label": "Sydney"
+    }, {
+        "value": "470",
+        "label": "Sydney South"
+    }, {
+        "value": "471",
+        "label": "The Rocks"
+    }, {
+        "value": "16572",
+        "label": "Circular Quay"
+    }, {
+        "value": "16574",
+        "label": "Walsh Bay"
+    }, {
+        "value": "35936",
+        "label": "Barangaroo"
     }],
     fields: {
         state: false,
