fixed content overriing issue

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -19,6 +19,11 @@
 window.AC = new Autocomplete.default({
     parent: 'body',
     // formShow: 'manual',
+    content: {
+        autocompleteGoogle: {
+            placeholder: 'Please enter your delivery Address'
+        }
+    },
     suburbs: [{
         "value": "464",
         "label": "Darling Harbour"
